[gd_scene load_steps=11 format=2]

[ext_resource path="res://turtlesheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://turtle.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 2 )

[node name="turtle" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 6, 6 )
frames = SubResource( 3 )

[node name="textbox" type="Panel" parent="."]
margin_left = -392.0
margin_top = -576.0
margin_right = 400.0
margin_bottom = -200.0
custom_styles/panel = SubResource( 9 )

[node name="dialogue" type="Label" parent="textbox"]
margin_left = 4.0
margin_top = 24.0
margin_right = 781.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 10 )
text = "TUTORIAL TURTLE:
 Hey, I'm tutorial turtle! 

 It's been a while since we've seen
 a chef around here...  You must be 
 looking for the magical ingredients!\""

[node name="text_timer" type="Timer" parent="textbox"]
wait_time = 5.0
one_shot = true

[node name="text2_timer" type="Timer" parent="textbox"]
wait_time = 7.0
one_shot = true

[connection signal="timeout" from="textbox/text_timer" to="." method="_on_text_timer_timeout"]
[connection signal="timeout" from="textbox/text2_timer" to="." method="_on_text2_timer_timeout"]
